# falcon-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  If you want to run the tests, you would need to execute  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: falcon_bench.rs
docs/: MATH.md
examples/: expand_key.rs  keygen.rs  serialize.rs  sign_verify.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_codec_roundtrip.rs  fuzz_sign_verify.rs  fuzz_verify_reject.rs
src/: codec.rs  common.rs  falcon.rs  fft.rs  fpr.rs  keygen.rs  lib.rs  rng.rs  safe_api.rs  shake.rs  sign.rs  vrfy.rs
tests/: bench_falcon.rs  fips206_kat.rs  full_coverage.rs  gen_fips206_vectors.rs  kat_test.rs  nist_kat.rs  prop_tests.rs  timing_test.rs
tests/fixtures/fips206/: FN-DSA-1024__DomainSeparation::None_sig.hex  FN-DSA-1024__DomainSeparation_None_pk.hex  FN-DSA-1024__Prehashed_SHA-512_ctx_b_fips206-ctx-v1_sig.hex  FN-DSA-512__DomainSeparation::Context_b_fips206-ctx-v1_sig.hex  FN-DSA-512__DomainSeparation::None_sig.hex  FN-DSA-512__Prehashed_SHA-256_no_ctx_pk.hex  FN-DSA-512__Prehashed_SHA-256_no_ctx_sig.hex  FN-DSA-512__Prehashed_SHA-512_ctx_b_fips206-ctx-v1_sig.hex
