[package]
name = "falcon-rs"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
authors = ["lattice-safe contributors"]
description = "Native Rust implementation of FN-DSA (FIPS 206), the NIST post-quantum digital signature standard (formerly Falcon)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lattice-safe/falcon-rs"
homepage = "https://github.com/lattice-safe/falcon-rs"
documentation = "https://docs.rs/falcon-rs"
keywords = [
    "fn-dsa",
    "fips-206",
    "post-quantum",
    "cryptography",
    "digital-signature",
]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []
serde = ["dep:serde", "zeroize/serde"]

[dependencies]
libm = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
zeroize = { version = "1", features = ["alloc"], default-features = false }

[lib]
name = "falcon"
path = "src/lib.rs"

[[test]]
name = "kat_test"
path = "tests/kat_test.rs"

[[test]]
name = "nist_kat"
path = "tests/nist_kat.rs"

[[test]]
name = "bench_falcon"
path = "tests/bench_falcon.rs"

[[test]]
name = "full_coverage"
path = "tests/full_coverage.rs"

[[test]]
name = "fips206_kat"
path = "tests/fips206_kat.rs"

[[test]]
name = "gen_fips206_vectors"
path = "tests/gen_fips206_vectors.rs"

[[test]]
name = "prop_tests"
path = "tests/prop_tests.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "falcon_bench"
harness = false

[profile.release]
opt-level = 3
